ch(api): improve backend api - write tests - refactor controller methods
[Delivers #164576153]
