# server/controllers/usersController.js
@@ -1,4 +1,4 @@
-import makeToken from '../helpers/auth';
+import auth from '../helpers/auth';
 import { users } from '../database/database';
 
 class UsersController {
@@ -14,7 +14,7 @@ class UsersController {
 
     // Create account if no errors
     users.push(user);
-    const token = makeToken(user);
+    const token = auth.makeToken(user);
     return res.status(201).json({
       status: 201,
       message: 'Success: User created successfully!',
@@ -23,8 +23,8 @@ class UsersController {
   }
 
   static userLogin(req, res) {
-    const { user } = req.body;
-    const token = makeToken(user);
+    const { foundUser } = req.body;
+    const token = auth.makeToken(foundUser);
     // Successful Login
     return res.status(200).json({
       status: 200,
@@ -34,5 +34,4 @@ class UsersController {
   }
 }
 
-const { createUser, userLogin } = UsersController;
-export { createUser, userLogin };
+export default UsersController;
